...
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_vertical_20"
        app:layout_constraintStart_toStartOf="@+id/neighbour_image"
        app:layout_constraintTop_toBottomOf="@+id/item_button_return" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_image"
        app:layout_constraintEnd_toEndOf="@+id/neighbour_image"
...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/neighbour_name_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif"
                android:text="Caroline"
                android:textColor="#3E3E3E"
...
